# rosbag_extract_video

./: CMakeLists.txt  README.md  package.xml
src/: rosbag_extract_video.cpp
